changed ::before in CSS again as now the ::before is also best vivisible in projects section with flex-box and flex-items in projects.html fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -241,7 +241,7 @@ section, footer{
     box-shadow: 0.5rem 0.5rem 1rem var(--alternate-bgc);
 }
 
-.frontcard::before{
+.card::before{
     content: '';
     border-radius: 50%;
     position: absolute;
@@ -258,40 +258,40 @@ section, footer{
     align-items: center;
     padding: 0.5rem;
     z-index: 1;
-  }
+}
   
-.frontcard:nth-child(1)::before {
+.card:nth-child(1)::before {
     content: '70% of units sold';
 }
   
-.frontcard:nth-child(2)::before {
+.card:nth-child(2)::before {
     content: 'Sales started';
 }
-
-.frontcard:nth-child(3)::before {
+  
+.card:nth-child(3)::before {
     content: 'The vision of living';
 }
-
+  
 .card h2,
 article h2{
-  font-size: 2.5rem;
-  color: var(--fontcolor3);
-  font-weight: 700;
-  margin: 1.4rem 0;
-  text-align: center;
+    font-size: 2.5rem;
+    color: var(--fontcolor3);
+    font-weight: 700;
+    margin: 1.4rem 0;
+    text-align: center;
 }
-
+  
 .card p,
 article p{
-  font-size: 1.6rem;
-  letter-spacing: 0.1rem;
-  line-height: 1.5;
-  text-align: center;
-  padding-bottom: 2rem;
-  color: var(--fontcolor3);
-  font-weight: bold;
+    font-size: 1.6rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.5;
+    text-align: center;
+    padding-bottom: 2rem;
+    color: var(--fontcolor3);
+    font-weight: bold;
 }
-
+  
 .quality article{
     background: transparent;
     border: 0.2rem solid var(--alternate-bgc);
@@ -299,8 +299,8 @@ article p{
     color: var(--fontcolor3);
     margin-right: 1.2rem;
     padding: 0.5rem 1rem;
-  }
-
+}
+  
 /*---------------------------------------------------------------------*/
 /*                    PROJECTS PAGE
 /*---------------------------------------------------------------------*/
